--- a/css/aqua.css
+++ b/css/aqua.css
@@ -2,7 +2,7 @@
 
 * {
   color: aqua !important;
-  background-color: aqua !important;
+  background: aqua !important;
   border-color: aqua !important;
 }
 
